--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Tat Vi Quyen - CV</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/profile.jpg" />
+    <link rel="icon" type="image/x-icon" href="assets/profile.jpg" />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"
@@ -40,7 +40,7 @@
         <span class="d-none d-lg-block"
           ><img
             class="img-fluid img-profile rounded-circle mx-auto mb-2"
-            src="assets/img/profile.jpg"
+            src="assets/profile.jpg"
             alt=""
         /></span>
       </a>
@@ -79,9 +79,23 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://tvqhub.com" target="_blank"
-              ><small data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom"><i class="fas fa-eye"></i> <span id="view-counter">1000</small></a
+            <small
+              class="d-inline-flex justify-content-center align-items-center"
             >
+              <a class="nav-link" href="https://tvqhub.com" target="_blank">
+                <span
+                  data-toggle="tooltip"
+                  data-placement="bottom"
+                  title="What is this?"
+                  ><i class="fas fa-eye"></i>
+                  <span id="view-counter">0</span>
+                </span></a
+              >
+              <strong class="mx-2 mx-lg-0">|</strong>
+              <a href="https://ly.tvqhub.com/cv" target="_blank" class="nav-link"
+                >PDF <i class="fas fa-external-link-alt"></i
+              ></a>
+            </small>
           </li>
         </ul>
       </div>
@@ -93,11 +107,11 @@
         <div class="resume-section-content">
           <h1 class="mb-0">
             TAT VI
-            <span class="text-primary">QUYEN</span>
+            <span class="text-primary colorful">QUYEN</span>
           </h1>
           <div class="subheading mb-5">
             Based in Ho Chi Minh City, Vietnam ·
-            <i class="fa fa-envelope"></i>&nbsp;<a
+            <small><i class="fa fa-envelope"></i></small>&nbsp;<a
               href="mailto:tvq9612@gmail.com"
               >tvq9612@gmail.com</a
             >
@@ -109,13 +123,25 @@
             "googling" and solving problems to create awesome works.
           </p>
           <div class="social-icons">
-            <a class="social-icon" href="https://www.linkedin.com/in/tvq" target="_blank">
+            <a
+              class="social-icon"
+              href="https://www.linkedin.com/in/tvq"
+              target="_blank"
+            >
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a class="social-icon" href="https://github.com/tvqqq" target="_blank">
+            <a
+              class="social-icon"
+              href="https://github.com/tvqqq"
+              target="_blank"
+            >
               <i class="fab fa-github"></i>
             </a>
-            <a class="social-icon" href="https://www.facebook.com/tvqqq" target="_blank">
+            <a
+              class="social-icon"
+              href="https://www.facebook.com/tvqqq"
+              target="_blank"
+            >
               <i class="fab fa-facebook-f"></i>
             </a>
           </div>
@@ -294,6 +320,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="js/countUp.umd.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
   </body>
