--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
   <body id="page-top">
     <!-- Navigation-->
     <nav
-      class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top"
+      class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top colorful-bg"
       id="sideNav"
     >
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
@@ -82,7 +82,7 @@
             <small
               class="d-inline-flex justify-content-center align-items-center"
             >
-              <a class="nav-link" href="https://tvqhub.com" target="_blank">
+              <a class="nav-link" href="https://ly.tvqhub.com/cloud-resume-challenge" target="_blank">
                 <span
                   data-toggle="tooltip"
                   data-placement="bottom"
@@ -92,7 +92,10 @@
                 </span></a
               >
               <strong class="mx-2 mx-lg-0">|</strong>
-              <a href="https://ly.tvqhub.com/cv" target="_blank" class="nav-link"
+              <a
+                href="https://ly.tvqhub.com/cv"
+                target="_blank"
+                class="nav-link"
                 >PDF <i class="fas fa-external-link-alt"></i
               ></a>
             </small>
@@ -156,70 +159,77 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>
-                Bring to the table win-win survival strategies to ensure
-                proactive domination. At the end of the day, going forward, a
-                new normal that has evolved from generation X is on the runway
-                heading towards a streamlined cloud solution. User generated
-                content in real-time will have multiple touchpoints for
-                offshoring.
-              </p>
+              <h3 class="mb-0">PHP Developer</h3>
+              <div class="subheading mb-3">HDWebsoft</div>
+              <ul>
+                <li>
+                  Developed various scalability, high availability and
+                  high-performance modules used by multiple airlines to manage
+                  stranded flights.
+                </li>
+                <li>
+                  Integrated web services about aviation (Amadeus) and payment
+                  solution (Marqeta) for project.
+                </li>
+                <li>
+                  Validated customer problems and found user-focussed solutions
+                  by working directly with customers.
+                </li>
+                <li>
+                  Learned management and estimation skills by taking charge of
+                  other members.
+                </li>
+              </ul>
             </div>
             <div class="flex-shrink-0">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">February 2019 - Present</span>
             </div>
           </div>
           <div
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>
-                Capitalize on low hanging fruit to identify a ballpark value
-                added activity to beta test. Override the digital divide with
-                additional clickthroughs from DevOps. Nanotechnology immersion
-                along the information highway will close the loop on focusing
-                solely on the bottom line.
-              </p>
+              <h3 class="mb-0">PHP Developer</h3>
+              <div class="subheading mb-3">Officience</div>
+              <ul>
+                <li>
+                  Developed the back-end some WordPress modules/ plugins: Find
+                  nearest place use Google Maps API, Newsletter Module, WP
+                  Cron,...
+                </li>
+                <li>
+                  Built a Laravel internal tool called “Leave1Click”, reducing
+                  time to submit a leave ticket and inform co-workers.
+                </li>
+                <li>
+                  Collaborated with BA to understand the requirements of the
+                  project and define the team's workflow.
+                </li>
+              </ul>
             </div>
             <div class="flex-shrink-0">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">April 2018 - January 2019</span>
             </div>
           </div>
           <div
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>
-                Podcasting operational change management inside of workflows to
-                establish a framework. Taking seamless key performance
-                indicators offline to maximise the long tail. Keeping your eye
-                on the ball while performing a deep dive on the start-up
-                mentality to derive convergence on cross-platform integration.
-              </p>
+              <h3 class="mb-0">IT Intern</h3>
+              <div class="subheading mb-3">Shiseido Cosmetics Vietnam</div>
+              <ul>
+                <li>
+                  Learned about business logic, database management, query data
+                  for reporting,... in a retail company.
+                </li>
+                <li>
+                  Participated in the development of internal tools including
+                  CRM Dashboard, Sales skills test,...
+                </li>
+              </ul>
             </div>
             <div class="flex-shrink-0">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-          <div class="d-flex flex-column flex-md-row justify-content-between">
-            <div class="flex-grow-1">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>
-                Collaboratively administrate empowered markets via plug-and-play
-                networks. Dynamically procrastinate B2C users after installed
-                base benefits. Dramatically visualize customer directed
-                convergence without revolutionary ROI.
-              </p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary">June 2017 - September 2017</span>
             </div>
           </div>
         </div>
@@ -233,23 +243,16 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">
+                Ho Chi Minh University of Foreign Languages<br />and Information
+                Technology
+              </h3>
+              <div class="subheading mb-3">Software Engineering</div>
+              <div>Top 5 IT Students of course 2014.</div>
+              <p>GPA: 8.27</p>
             </div>
             <div class="flex-shrink-0">
-              <span class="text-primary">August 2006 - May 2010</span>
-            </div>
-          </div>
-          <div class="d-flex flex-column flex-md-row justify-content-between">
-            <div class="flex-grow-1">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">September 2014 - June 2018</span>
             </div>
           </div>
         </div>
@@ -261,36 +264,28 @@
           <h2 class="mb-5">Skills</h2>
           <div class="subheading mb-3">Programming Languages & Tools</div>
           <ul class="list-inline dev-icons">
+            <li class="list-inline-item"><i class="fab fa-php"></i></li>
+            <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
+            <li class="list-inline-item"><i class="fab fa-laravel"></i></li>
             <li class="list-inline-item"><i class="fab fa-html5"></i></li>
             <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
             <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-            <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-            <li class="list-inline-item"><i class="fab fa-react"></i></li>
-            <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-            <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-            <li class="list-inline-item"><i class="fab fa-less"></i></li>
-            <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-            <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-            <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-            <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+            <li class="list-inline-item"><i class="fab fa-vuejs"></i></li>
+            <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
+            <li class="list-inline-item"><i class="fab fa-git"></i></li>
           </ul>
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">DevOps</div>
+          <ul class="list-inline dev-icons">
+            <li class="list-inline-item"><i class="fab fa-aws"></i></li>
+            <li class="list-inline-item"><i class="fab fa-linux"></i></li>
+            <li class="list-inline-item"><i class="fab fa-docker"></i></li>
+            <li class="list-inline-item"><i class="fab fa-github"></i></li>
+          </ul>
+          <div class="subheading mb-3">Languages</div>
           <ul class="fa-ul mb-0">
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
-              Mobile-First, Responsive Design
-            </li>
-            <li>
-              <span class="fa-li"><i class="fas fa-check"></i></span>
-              Cross Browser Testing & Debugging
-            </li>
-            <li>
-              <span class="fa-li"><i class="fas fa-check"></i></span>
-              Cross Functional Teams
-            </li>
-            <li>
-              <span class="fa-li"><i class="fas fa-check"></i></span>
-              Agile Development & Scrum
+              TOEIC 745/990 (February 2018)
             </li>
           </ul>
         </div>
@@ -300,18 +295,27 @@
       <section class="resume-section" id="interests">
         <div class="resume-section-content">
           <h2 class="mb-5">Interests</h2>
-          <p>
-            Apart from being a web developer, I enjoy most of my time being
-            outdoors. In the winter, I am an avid skier and novice ice climber.
-            During the warmer months here in Colorado, I enjoy mountain biking,
-            free climbing, and kayaking.
-          </p>
-          <p class="mb-0">
-            When forced indoors, I follow a number of sci-fi and fantasy genre
-            movies and television shows, I am an aspiring chef, and I spend a
-            large amount of my free time exploring the latest technology
-            advancements in the front-end web development world.
-          </p>
+          <ul class="fa-ul mb-0">
+            <li class="my-2">
+              <span class="fa-li"><i class="fas fa-running"></i></span>Running
+            </li>
+            <li class="my-2">
+              <span class="fa-li"><i class="fas fa-feather-alt"></i></span
+              >Writing blog
+            </li>
+            <li class="my-2">
+              <span class="fa-li"><i class="fas fa-language"></i></span>Learning
+              foreign languages
+            </li>
+            <li class="my-2">
+              <span class="fa-li"><i class="fas fa-map-marked-alt"></i></span
+              >Travelling
+            </li>
+            <li class="my-2">
+              <span class="fa-li"><i class="fas fa-book-reader"></i></span
+              >Reading books
+            </li>
+          </ul>
         </div>
       </section>
     </div>
