minify front end

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,28 +6,16 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="author" content="Tat Vi Quyen (TVQ)" />
     <title>Tat Vi Quyen - CV</title>
-    <link rel="icon" type="image/x-icon" href="assets/profile.jpg" />
+    <link rel="icon" type="image/x-icon" href="assets/profile.png" />
     <!-- Font Awesome icons (free version)-->
     <script
       src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"
       crossorigin="anonymous"
     ></script>
-    <!-- Google fonts-->
-    <link
-      href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i"
-      rel="stylesheet"
-      type="text/css"
-    />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/styles.pure.css" rel="stylesheet" />
   </head>
   <body id="page-top">
     <!-- Navigation-->
@@ -40,7 +28,7 @@
         <span class="d-none d-lg-block"
           ><img
             class="img-fluid img-profile rounded-circle mx-auto mb-2"
-            src="assets/profile.jpg"
+            src="assets/profile.png"
             alt=""
         /></span>
       </a>
@@ -82,7 +70,11 @@
             <small
               class="d-inline-flex justify-content-center align-items-center"
             >
-              <a class="nav-link" href="https://ly.tvqhub.com/cloud-resume-challenge" target="_blank">
+              <a
+                class="nav-link"
+                href="https://ly.tvqhub.com/cloud-resume-challenge"
+                target="_blank"
+              >
                 <span
                   data-toggle="tooltip"
                   data-placement="bottom"
@@ -324,8 +316,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="js/countUp.umd.js"></script>
+    <script src="js/countUp.umd.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.min.js"></script>
   </body>
 </html>
